--- a/loginCode.html
+++ b/loginCode.html
@@ -24,7 +24,7 @@
         First Name: <input type= "text" id="fName"><br> 
         Last Name:<input tpye="text" id="lNAme"><br>
         Badge Number:<input type="number" id="badgeID"><br>
-        <input type= "submit" onclick="checkCreds();"> 
+        <input id =" loginButton " type= "submit" onclick="checkCreds();"> 
         </form>
 
     </body>
